# CMakeList.txt : CMake project for PA1, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("PA1")

# Add source to this project's executable.
add_executable (PA1 "PA1.cpp" "PA1.h"  "LinkedList.h" "Node.h")

# TODO: Add tests and install targets if needed.


